# drift-rdp

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  TODOS.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
native-app/: Cargo.toml
src/: App.tsx  types.test.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: clipboard.rs  connection.rs  mod.rs  session.rs  settings.rs
src-tauri/src/rdp/: client.rs  clipboard.rs  display.rs  frame_transport.rs  input.rs  mod.rs  session.rs
src-tauri/src/renderer/: fullscreen_quad.wgsl  gpu.rs  h264_encoder.rs  mod.rs  shared_frame.rs
src-tauri/src/store/: connections.rs  credentials.rs  mod.rs  settings.rs
src-tauri/src/utils/: mod.rs  network.rs  ssh_config.rs
src/components/: ErrorBoundary.tsx  ShortcutOverlay.tsx  Toast.tsx
src/components/connections/: ConnectionCard.tsx  ConnectionForm.tsx  ConnectionGrid.tsx  QuickConnect.tsx
src/components/layout/: Sidebar.tsx  StatusBar.tsx  Titlebar.tsx
src/components/session/: PerformanceHUD.tsx  SessionCanvas.tsx  SessionTabs.tsx  SessionToolbar.tsx  SessionView.tsx
src/hooks/: useClipboard.ts  useKeyboard.ts  useRdpSession.ts  useTheme.ts
src/lib/: frame-protocol.test.ts  frame-protocol.ts  h264-decoder.ts  input-mapper.ts  tauri.ts
src/stores/: connectionStore.ts  sessionStore.ts  settingsStore.ts  toastStore.ts
src/styles/: globals.css
(+7 files in other folders)
