[package]
name = "rdp-client"
version = "0.1.0"
description = "Beautiful RDP Client for Mac & Linux"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
keyring = { version = "3", features = ["apple-native", "linux-native"] }
dirs = "5"
ironrdp = { version = "0.14", features = ["connector", "session", "graphics", "input", "cliprdr", "displaycontrol"] }
ironrdp-tokio = { version = "0.8", features = ["reqwest"] }
ironrdp-tls = { version = "0.2", features = ["rustls"] }
x509-cert = "0.2"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "1"

[dev-dependencies]
tempfile = "3"
